--- a/notebooks/search/03-ELSER.ipynb
+++ b/notebooks/search/03-ELSER.ipynb
@@ -12,7 +12,7 @@
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/search/03-ELSER.ipynb)\n",
     "\n",
     "\n",
-    "Learn how to use the [ELSER](https://www.elastic.co/guide/en/machine-learning/current/ml-nlp-elser.html) for text expansion-powered semantic search."
+    "Learn how to use the [ELSER v2](https://www.elastic.co/guide/en/machine-learning/master/ml-nlp-elser.html) for text expansion-powered semantic search."
    ]
   },
   {
@@ -56,17 +56,18 @@
     "id": "nSw1R8e28F_E"
    },
    "source": [
-    "# Setup ELSER\n",
-    "To use ELSER, you must have the [appropriate subscription]() level\n",
+    "# Setup ELSER v2\n",
+    "\n",
+    "From 8.11, Elastic supports ELSER v2 model which offers an improved retrieval accuracy. To use ELSER v2, you must have the [appropriate subscription]() level\n",
     "for semantic search or the trial period activated.\n",
     "\n",
-    "Follow these [instructions](https://www.elastic.co/guide/en/machine-learning/8.8/ml-nlp-elser.html#trained-model) to download and deploy ELSER in the Kibana UI or using the Dev Tools **Console**.\n",
+    "Follow these [instructions](https://www.elastic.co/guide/en/machine-learning/master/ml-nlp-elser.html#trained-model) to download and deploy ELSER v2  `.elser_model_2` in the Kibana UI or using the Dev Tools **Console**.\n",
     "\n",
     "(Console commands in comments 👇)\n",
     "<!-- # download elser model\n",
     "\n",
     "```json\n",
-    "PUT _ml/trained_models/.elser_model_1\n",
+    "PUT _ml/trained_models/.elser_model_2\n",
     "{\n",
     "  \"input\": {\n",
     "\t\"field_names\": [\"text_field\"]\n",
@@ -75,7 +76,15 @@
     "``` -->\n",
     "<!-- # deploy model\n",
     "```json\n",
-    "POST _ml/trained_models/.elser_model_1/deployment/_start?deployment_id=for_search -->"
+    "POST _ml/trained_models/.elser_model_2/deployment/_start?deployment_id=for_search -->\n",
+    "\n",
+    "# Upgrading existing index to ELSER v2\n",
+    "\n",
+    "If have already had set up an index with ELSER v1 model `.elser_model_1`, You can easily upgrade to ELSER v2 model by re-indexing with ingest pipeline referencing ELSER v2 `.elser_model_2` and starting querying your data with ELSER v2 right away. \n",
+    "\n",
+    "For more information please refer to : https://www.elastic.co/guide/en/elasticsearch/reference/master/semantic-search-elser.html#reindexing-data-elser\n",
+    "\n",
+    "Alternatively, you can still continue using ELSER v1 `.elser_model_1`. But you may have to set up the trained model via Console commands. "
    ]
   },
   {
@@ -123,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "uP_GTVRi-d96"
    },
@@ -150,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -219,7 +228,7 @@
    "source": [
     "# Indexing Documents with ELSER\n",
     "\n",
-    "In order to use ELSER on our Elastic Cloud deployment we'll need to create an ingest pipeline that contains an inference processor that runs the ELSER model.\n",
+    "In order to use ELSER on our Elastic Cloud deployment we'll need to create an ingest pipeline that contains an inference processor that runs the ELSER v2 model.\n",
     "Let's add that pipeline using the [`put_pipeline`](https://www.elastic.co/guide/en/elasticsearch/reference/master/put-pipeline-api.html) method."
    ]
   },
@@ -238,11 +247,11 @@
     "\n",
     "client.ingest.put_pipeline(\n",
     "    id=\"elser-ingest-pipeline\", \n",
-    "    description=\"Ingest pipeline for ELSER\",\n",
+    "    description=\"Ingest pipeline for ELSER v2\",\n",
     "    processors=[\n",
     "    {\n",
     "      \"inference\": {\n",
-    "        \"model_id\": \".elser_model_1\",\n",
+    "        \"model_id\": \".elser_model_2\",\n",
     "        \"target_field\": \"ml\",\n",
     "        \"field_map\": {\n",
     "          \"plot\": \"text_field\"\n",
@@ -268,7 +277,7 @@
     "Let's note a few important parameters from that API call:\n",
     "\n",
     "- `inference`: A processor that performs inference using a machine learning model.\n",
-    "- `model_id`: Specifies the ID of the machine learning model to be used. In this example, the model ID is set to `.elser_model_1`.\n",
+    "- `model_id`: Specifies the ID of the machine learning model to be used. In this example, the model ID is set to `.elser_model_2`.\n",
     "- `target_field`: Defines the field where the inference result will be stored. Here, it is set to `ml`.\n",
     "- `text_expansion`: Configures text expansion options for the inference process.\n",
     "In this example, the inference results will be stored in a field named \"tokens\"."
@@ -418,7 +427,7 @@
     "    query={\n",
     "        \"text_expansion\": {\n",
     "            \"ml.tokens\": {\n",
-    "                \"model_id\":\".elser_model_1\",\n",
+    "                \"model_id\":\".elser_model_2\",\n",
     "                \"model_text\":\"child toy\"\n",
     "            }\n",
     "        }\n",
