--- a/supporting-blog-content/lexical-and-semantic-search-with-elasticsearch/ecommerce_dense_sparse_project.ipynb
+++ b/supporting-blog-content/lexical-and-semantic-search-with-elasticsearch/ecommerce_dense_sparse_project.ipynb
@@ -360,7 +360,7 @@
       "source": [
         "#  dataset\n",
         "\n",
-        "url = \".../products-ecommerce.json\" # json raw file - update the link here\n",
+        "url = \"https://raw.githubusercontent.com/elastic/elasticsearch-labs/02c01b3450e8ddc72ccec85d559eee5280c185ac/supporting-blog-content/lexical-and-semantic-search-with-elasticsearch/products-ecommerce.json\" # json raw file - update the link here\n",
         "\n",
         "response = urlopen(url)\n",
         "\n",
