remove model version from heading

--- a/notebooks/search/03-ELSER.ipynb
+++ b/notebooks/search/03-ELSER.ipynb
@@ -56,9 +56,9 @@
     "id": "nSw1R8e28F_E"
    },
    "source": [
-    "# Setup ELSER v2\n",
+    "# Setup ELSER\n",
     "\n",
-    "From 8.11, Elastic supports ELSER v2 model which offers an improved retrieval accuracy. To use ELSER v2, you must have the [appropriate subscription]() level\n",
+    "From 8.11, Elastic supports ELSER v2 model which offers improved retrieval accuracy. To use ELSER, you must have the [appropriate subscription]() level\n",
     "for semantic search or the trial period activated.\n",
     "\n",
     "Follow these [instructions](https://www.elastic.co/guide/en/machine-learning/current/ml-nlp-elser.html#trained-model) to download and deploy ELSER v2  `.elser_model_2` in the Kibana UI or using the Dev Tools **Console**.\n",
