--- a/notebooks/search/03-ELSER.ipynb
+++ b/notebooks/search/03-ELSER.ipynb
@@ -284,7 +284,7 @@
     "## Create index with mappings\n",
     "\n",
     "To use the ELSER model at index time, we'll need to create an index mapping that supports a [`text_expansion`](https://www.elastic.co/guide/en/elasticsearch/reference/current/query-dsl-text-expansion-query.html) query.\n",
-    "The mapping must include a field of type [`rank_features`](https://www.elastic.co/guide/en/elasticsearch/reference/current/rank-features.html) to work with our feature vectors of interest.\n",
+    "The mapping must include a field of type [`sparse_vector`](https://www.elastic.co/guide/en/elasticsearch/reference/current/rank-features.html) to work with our feature vectors of interest.\n",
     "This field contains the token-weight pairs the ELSER model created based on the input text.\n",
     "\n",
     "Let's create an index named `elser-movies` with the mappings we need.\n"
@@ -323,7 +323,7 @@
     "        }\n",
     "      },\n",
     "      \"ml.tokens\": {\n",
-    "        \"type\": \"rank_features\"\n",
+    "        \"type\": \"sparse_vector\"\n",
     "      },\n",
     "    }\n",
     "  }\n",
