--- a/supporting-blog-content/lexical-and-semantic-search-with-elasticsearch/ecommerce_dense_sparse_project.ipynb
+++ b/supporting-blog-content/lexical-and-semantic-search-with-elasticsearch/ecommerce_dense_sparse_project.ipynb
@@ -215,7 +215,7 @@
         "\n",
         "Then, we create a source index to load `products-ecommerce.json`, this will be the `ecommerce` index and a destination index to extract the documents from the source and index these documents into the destination `ecommerce-search`.\n",
         "\n",
-        "For the `ecommerce-search` index we add a field to support dense vector storage and search `description_vector.predicted_value`, this is the target field for inference results. The field type in this case is `dense_vector`, the `all-mpnet-base-v2` model has embedding_size of 768, so dims is set to 768. We also add a `rank_features` field type to support the text expansion output."
+        "For the `ecommerce-search` index we add a field to support dense vector storage and search `description_vector.predicted_value`, this is the target field for inference results. The field type in this case is `dense_vector`, the `all-mpnet-base-v2` model has embedding_size of 768, so dims is set to 768. We also add a `sparse_vector` field type to support the text expansion output."
       ],
       "metadata": {
         "id": "QUQ1nCaiKIQr"
@@ -323,7 +323,7 @@
         "        }\n",
         "      },\n",
         "      \"ml.tokens\": { # The name of the field to contain the generated tokens.\n",
-        "        \"type\": \"rank_features\" # ELSER output must be ingested into a field with the rank_features field type.\n",
+        "        \"type\": \"sparse_vector\" # ELSER output must be ingested into a field with the sparse_vector field type.\n",
         "      },\n",
         "     \"description_vector.predicted_value\": { # Inference results field, target_field.predicted_value\n",
         "     \"type\": \"dense_vector\",\n",
