--- a/notebooks/search/03-ELSER.ipynb
+++ b/notebooks/search/03-ELSER.ipynb
@@ -12,7 +12,7 @@
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/search/03-ELSER.ipynb)\n",
     "\n",
     "\n",
-    "Learn how to use the [ELSER v2](https://www.elastic.co/guide/en/machine-learning/current/ml-nlp-elser.html) for text expansion-powered semantic search."
+    "Learn how to use the [ELSER](https://www.elastic.co/guide/en/machine-learning/current/ml-nlp-elser.html) for text expansion-powered semantic search."
    ]
   },
   {
@@ -58,10 +58,10 @@
    "source": [
     "# Setup ELSER\n",
     "\n",
-    "From 8.11, Elastic supports ELSER v2 model which offers improved retrieval accuracy. To use ELSER, you must have the [appropriate subscription]() level\n",
+    "From 8.11, Elastic supports  `.elser_model_2` model which offers an improved retrieval accuracy. To use ELSER, you must have the [appropriate subscription]() level\n",
     "for semantic search or the trial period activated.\n",
     "\n",
-    "Follow these [instructions](https://www.elastic.co/guide/en/machine-learning/current/ml-nlp-elser.html#trained-model) to download and deploy ELSER v2  `.elser_model_2` in the Kibana UI or using the Dev Tools **Console**.\n",
+    "Follow these [instructions](https://www.elastic.co/guide/en/machine-learning/current/ml-nlp-elser.html#trained-model) to download and deploy ELSER  `.elser_model_2` in the Kibana UI or using the Dev Tools **Console**.\n",
     "\n",
     "(Console commands in comments 👇)\n",
     "<!-- # download elser model\n",
@@ -78,13 +78,11 @@
     "```json\n",
     "POST _ml/trained_models/.elser_model_2/deployment/_start?deployment_id=for_search -->\n",
     "\n",
-    "# Upgrading existing index to ELSER v2\n",
+    "## Upgrading existing index to `.elser_model_2` ELSER model\n",
     "\n",
-    "If have already had set up an index with ELSER v1 model `.elser_model_1`, You can easily upgrade to ELSER v2 model by re-indexing with ingest pipeline referencing ELSER v2 `.elser_model_2` and starting querying your data with ELSER v2 right away. \n",
+    "If have already had set up an index with ELSER model `.elser_model_1`, You can easily upgrade to  `.elser_model_2`  model by [Reindexing with ingest pipeline](https://www.elastic.co/guide/en/elasticsearch/reference/current/docs-reindex.html#reindex-with-an-ingest-pipeline) referencing ELSER `.elser_model_2` and starting querying your data with ELSER right away. \n",
     "\n",
-    "For more information please refer to : https://www.elastic.co/guide/en/elasticsearch/reference/master/semantic-search-elser.html#reindexing-data-elser\n",
-    "\n",
-    "Alternatively, you can still continue using ELSER v1 `.elser_model_1`. But you may have to set up the trained model via Console commands. "
+    "For more information refer to our notebook on [how to upgrade an index to use elser model](./06-upgrading-index-elser.ipynb)\n"
    ]
   },
   {
@@ -132,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
     "id": "uP_GTVRi-d96"
    },
@@ -159,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -228,7 +226,7 @@
    "source": [
     "# Indexing Documents with ELSER\n",
     "\n",
-    "In order to use ELSER on our Elastic Cloud deployment we'll need to create an ingest pipeline that contains an inference processor that runs the ELSER v2 model.\n",
+    "In order to use ELSER on our Elastic Cloud deployment we'll need to create an ingest pipeline that contains an inference processor that runs the ELSER model.\n",
     "Let's add that pipeline using the [`put_pipeline`](https://www.elastic.co/guide/en/elasticsearch/reference/master/put-pipeline-api.html) method."
    ]
   },
@@ -247,7 +245,7 @@
     "\n",
     "client.ingest.put_pipeline(\n",
     "    id=\"elser-ingest-pipeline\", \n",
-    "    description=\"Ingest pipeline for ELSER v2\",\n",
+    "    description=\"Ingest pipeline for ELSER\",\n",
     "    processors=[\n",
     "    {\n",
     "      \"inference\": {\n",
