add more examples to upgrade notebook

--- a/notebooks/search/06-upgrading-index-elser.ipynb
+++ b/notebooks/search/06-upgrading-index-elser.ipynb
@@ -6,16 +6,17 @@
    "source": [
     "# Upgrade index to use ELSER using Reindex API\n",
     "\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/re-indexing.ipynb)\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/06-upgrading-index-elser.ipynb)\n",
     "\n",
     "Elasticsearch [Reindex API](https://www.elastic.co/guide/en/elasticsearch/reference/current/docs-reindex.html) can be used when you want to move data from one index to another, update or change mapping of the index or even update data of your index. \n",
     "\n",
     "In this workbook we will see example on how to migrate your index to use ELSER model using [Reindex API with ingestion pipeline](https://www.elastic.co/guide/en/elasticsearch/reference/current/docs-reindex.html#reindex-with-an-ingest-pipeline). \n",
     "\n",
-    "The two specific scenerios that we will see in this notebook are:\n",
+    "Few scenerios that we will see in this workbook are:\n",
     "\n",
     "1. Migrating a index which doesn't have generated [`text_expansion`](https://www.elastic.co/guide/en/elasticsearch/reference/current/query-dsl-text-expansion-query.html) field to  ELSER model `.elser_model_2` \n",
     "2. Upgrade an existing index with `.elser_model_1` to use `.elser_model_2` model\n",
+    "3. Upgrade a index which use different model to use ELSER\n",
     " \n"
    ]
   },
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,9 +430,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Case 2: Upgrade ELSER model\n",
+    "# Case 2: Upgrade index with ELSER model to `.elser_model_2`\n",
     "\n",
-    "If you already have a index with ELSER model `.elser_model_1` and would like to upgrade to `.elser_model_2`, you can use the Reindexing API with ingestion pipeline to use ELSER `.elser_model_2` model.\n",
+    "If you already have a index with ELSER model `.elser_model_1` and would like to upgrade to `.elser_model_2`, you can use the Reindex API with ingestion pipeline to use ELSER `.elser_model_2` model.\n",
     "\n",
     "**`Note:`** Before we begin, ensure that you are on Elasticsearch 8.11 version and ELSER model `.elser_model_2` is deployed. You can follow these [instructions](https://www.elastic.co/guide/en/machine-learning/current/ml-nlp-ELSER.html#trained-model) to download and deploy trained model in the Kibana UI or using the Dev Tools **Console**. \n"
    ]
@@ -515,7 +516,7 @@
     "# Use Reindex API\n",
     "we will use [Reindex API](https://www.elastic.co/guide/en/elasticsearch/reference/current/docs-reindex.html) to move data from old index to new index `elser-upgrade-index-demo`. Copy and run below code in your **dev console**\n",
     "\n",
-    "Note that We are excluding target field `ml` from old index.\n",
+    "Note that we are excluding target field `ml` from old index.\n",
     "\n",
     "```\n",
     "POST _reindex?wait_for_completion=false\n",
@@ -588,6 +589,198 @@
     "    title = hit['_source']['title']\n",
     "    plot = hit['_source']['plot']\n",
     "    print(f\"Score: {score}\\nTitle: {title}\\nPlot: {plot}\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Case 3: Upgrade a index with different model to ELSER\n",
+    "\n",
+    "Now we will see how to move your index which already has generated `embedding` using a different model. \n",
+    "\n",
+    "Lets consider the index - `blogs` and has generated `text_embedding` using the NLP model `sentence-transformers__all-minilm-l6-v2`. In case you would like know about more how to load a NLP model to an index, follow the steps from our notebook [loading-model-from-hugging-face.ipynb](../integrations/hugging-face/loading-model-from-hugging-face.ipynb)\n",
+    "\n",
+    "Follow similiar proceedure that we did in previously. \n",
+    "1. Create a ingestion pipeline with ELSER model `.elser_model_2`\n",
+    "2. Create a index with mappings, with the pipeline we create in step 1\n",
+    "3. Reindex, excluding the field with generated embedding from the `blogs` index\n",
+    "\n",
+    "Before we begin, lets take a look at our index `blogs` and see the mappings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ObjectApiResponse({'blogs': {'aliases': {}, 'mappings': {'properties': {'text_embedding': {'properties': {'is_truncated': {'type': 'boolean'}, 'model_id': {'type': 'text', 'fields': {'keyword': {'type': 'keyword', 'ignore_above': 256}}}, 'predicted_value': {'type': 'dense_vector', 'dims': 384, 'index': True, 'similarity': 'l2_norm'}}}, 'title': {'type': 'text', 'fields': {'keyword': {'type': 'keyword', 'ignore_above': 256}}}}}, 'settings': {'index': {'routing': {'allocation': {'include': {'_tier_preference': 'data_content'}}}, 'number_of_shards': '1', 'provided_name': 'blogs', 'default_pipeline': 'vectorize_blogs', 'creation_date': '1697033266359', 'number_of_replicas': '1', 'uuid': 'e_SkUcPXT06ZMs1ZbsZfQw', 'version': {'created': '8500003'}}}}})"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client.indices.get(index=\"blogs\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice the field `text_embedding`, We will have to exclude this field in our new index and generate mapping with `text_expansion` against the field `title` from the `blogs` index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create ingestion pipeline\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.ingest.put_pipeline(\n",
+    "    id=\"elser-pipeline-blogs\", \n",
+    "    description=\"Ingest pipeline for ELSER upgrade\",\n",
+    "    processors=[\n",
+    "    {\n",
+    "      \"inference\": {\n",
+    "        \"model_id\": \".elser_model_2\",\n",
+    "        \"target_field\": \"ml\",\n",
+    "        \"field_map\": {\n",
+    "          \"title\": \"text_field\"\n",
+    "        },\n",
+    "        \"inference_config\": {\n",
+    "          \"text_expansion\": {\n",
+    "            \"results_field\": \"tokens\"\n",
+    "          }\n",
+    "        }\n",
+    "      }\n",
+    "    }\n",
+    "  ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create index with mappings\n",
+    "\n",
+    "Lets create a index `elser-blogs` with mappings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.indices.create(\n",
+    "  index=\"elser-blogs\",\n",
+    "  mappings={\n",
+    "    \"properties\": {\n",
+    "      \"title\": {\n",
+    "        \"type\": \"text\",\n",
+    "        \"fields\": {\n",
+    "          \"keyword\": {\n",
+    "            \"type\": \"keyword\",\n",
+    "            \"ignore_above\": 256\n",
+    "          }\n",
+    "        }\n",
+    "      },\n",
+    "      \"ml.tokens\": {\n",
+    "        \"type\": \"rank_features\"\n",
+    "      },\n",
+    "    }\n",
+    "  }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reindex API\n",
+    "we will use the Reindex API to copy data and generate `text_expansion` embedding to our new index `elser-blogs`\n",
+    "\n",
+    "Copy and run below code in your dev console\n",
+    "\n",
+    "```\n",
+    "POST _reindex?wait_for_completion=false\n",
+    "{\n",
+    "  \"source\": {\n",
+    "    \"index\": \"blogs\",\n",
+    "    \"_source\": {\n",
+    "      \"excludes\": [\"text_embedding\"]\n",
+    "    }\n",
+    "  },\n",
+    "  \"dest\": {\n",
+    "    \"index\": \"elser-blogs\",\n",
+    "    \"pipeline\":  \"elser-pipeline-blogs\"\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "```\n",
+    "\n",
+    "Confirm that the task is complete by check the status using the [Task management API](https://www.elastic.co/guide/en/elasticsearch/reference/current/tasks.html)  in dev console\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Querying your data\n",
+    "Success! Now we can query data on the index `elser-blogs`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score: 27.618645\n",
+      "Title: Brewing in Beats: Track network connections\n",
+      "Score: 3.8143802\n",
+      "Title: Machine Learning for Nginx Logs - Identifying Operational Issues with Your Website\n",
+      "Score: 3.3623078\n",
+      "Title: Data Visualization For Machine Learning\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = client.search(\n",
+    "    index='elser-blogs', \n",
+    "    size=3,\n",
+    "    query={\n",
+    "        \"text_expansion\": {\n",
+    "            \"ml.tokens\": {\n",
+    "                \"model_id\":\".elser_model_2\",\n",
+    "                \"model_text\":\"track network connections\"\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "for hit in response['hits']['hits']:\n",
+    "    doc_id = hit['_id']\n",
+    "    score = hit['_score']\n",
+    "    title = hit['_source']['title']\n",
+    "    print(f\"Score: {score}\\nTitle: {title}\")\n"
    ]
   }
  ],
